--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,6 +1,6 @@
 $header-height:75px;
 $header-elem-width:200px;
-$font:Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif, cursive;
+$font: Monospace;
 //main page
 * {
   margin: 0;
